hexagon_logic/src/snapshots/hexagon_logic__board__tests__test_move_all_black_pawns.snap
---
source: hexagon_logic/src/board.rs
assertion_line: 226
expression: options
---
[
    MoveOption {
        pos: Position {
            y: 1,
            x: 9,
        },
        action: Move,
    },
    MoveOption {
        pos: Position {
            y: 1,
            x: 9,
        },
        action: Move,
    },
    MoveOption {
        pos: Position {
            y: 1,
            x: 8,
        },
        action: Move,
    },
    MoveOption {
        pos: Position {
            y: 2,
            x: 8,
        },
        action: Move,
    },
    MoveOption {
        pos: Position {
            y: 2,
            x: 8,
        },
        action: Move,
    },
    MoveOption {
        pos: Position {
            y: 2,
            x: 7,
        },
        action: Move,
    },
    MoveOption {
        pos: Position {
            y: 3,
            x: 7,
        },
        action: Move,
    },
    MoveOption {
        pos: Position {
            y: 3,
            x: 7,
        },
        action: Move,
    },
    MoveOption {
        pos: Position {
            y: 3,
            x: 6,
        },
        action: Move,
    },
    MoveOption {
        pos: Position {
            y: 4,
            x: 6,
        },
        action: Move,
    },
    MoveOption {
        pos: Position {
            y: 4,
            x: 6,
        },
        action: Move,
    },
    MoveOption {
        pos: Position {
            y: 4,
            x: 5,
        },
        action: Move,
    },
    MoveOption {
        pos: Position {
            y: 5,
            x: 5,
        },
        action: Move,
    },
    MoveOption {
        pos: Position {
            y: 5,
            x: 5,
        },
        action: Move,
    },
    MoveOption {
        pos: Position {
            y: 6,
            x: 5,
        },
        action: Move,
    },
    MoveOption {
        pos: Position {
            y: 6,
            x: 5,
        },
        action: Move,
    },
    MoveOption {
        pos: Position {
            y: 6,
            x: 4,
        },
        action: Move,
    },
    MoveOption {
        pos: Position {
            y: 7,
            x: 5,
        },
        action: Move,
    },
    MoveOption {
        pos: Position {
            y: 7,
            x: 5,
        },
        action: Move,
    },
    MoveOption {
        pos: Position {
            y: 7,
            x: 4,
        },
        action: Move,
    },
    MoveOption {
        pos: Position {
            y: 8,
            x: 5,
        },
        action: Move,
    },
    MoveOption {
        pos: Position {
            y: 8,
            x: 5,
        },
        action: Move,
    },
    MoveOption {
        pos: Position {
            y: 8,
            x: 4,
        },
        action: Move,
    },
    MoveOption {
        pos: Position {
            y: 9,
            x: 5,
        },
        action: Move,
    },
    MoveOption {
        pos: Position {
            y: 9,
            x: 5,
        },
        action: Move,
    },
    MoveOption {
        pos: Position {
            y: 9,
            x: 4,
        },
        action: Move,
    },
]
