hexagon_logic/src/snapshots/hexagon_logic__board__tests__test_move_pawn.snap
---
source: hexagon_logic/src/board.rs
assertion_line: 215
expression: options
---
[
    MoveOption {
        pos: Position {
            y: 5,
            x: 3,
        },
        action: Move,
    },
]
